--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Погнали</title>
+    <link rel="stylesheet" href="css/master.min.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Document</title>
-  <link rel="stylesheet" href="css/master.min.css" />
-</head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <div class="logo">
+            <a class="logo__link" href="#">
+              <img
+                class="logo__link-img"
+                src="img/dest/logo-mobile-white@1x.png"
+                alt=""
+              />
+            </a>
+          </div>
+          <nav class="menu">
+            <div class="menu__btn menu__btn-active"></div>
+          </nav>
+        </div>
+        <div class="description">
+          <h2 class="description__title">
+            В путешествие с крутыми попутчиками!
+          </h2>
+        </div>
+        <div class="traveller"></div>
+      </div>
+    </header>
 
-<body>
-  <header>
+    <section class="delight">
+      <div class="connection">
+        <div class="connection__phone circle orange">
+          <div class="connection__phone-icon"></div>
+        </div>
+        <div class="connection__mail circle yellow">
+          <div class="connection__mail-icon"></div>
+        </div>
+        <div class="connection__autorization long-circle light-yellow">
+          <a href="#">авторизация</a>
+        </div>
+      </div>
 
-  </header>
-  <img src="img/dest/123.jpg" alt="">
-  <script src="js/master.min.js"></script>
-</body>
+      <div class="citation">
+        <div class="citation__text">
+          <p>«Лучшее приложение, что я видел в жизни!»</p>
+        </div>
+        <div class="citation__autor">
+          <p>Мурат Эльтазин главный редактор газеты «гаджетлайф»</p>
+        </div>
+      </div>
+    </section>
 
+    <script src="js/master.min.js"></script>
+  </body>
 </html>
