--- a/src/index.html
+++ b/src/index.html
@@ -187,6 +187,45 @@
           <p>Теперь можно легко найти единомышленников!</p>
         </div>
       </div>
+
+      <div class="companion">
+        <div class="companion-card">
+          <div class="companion-card__score"></div>
+          <div class="companion-card__photo"></div>
+          <div class="companion-card__flag">
+            <ul>
+              <li>
+                <img src="img/dest/icons.svg#flag-sri-lanka" alt="" />
+              </li>
+              <li>
+                <img src="img/dest/icons.svg#flag-thailand" alt="" />
+              </li>
+              <li>
+                <img src="img/dest/icons.svg#flag-seychelles" alt="" />
+              </li>
+            </ul>
+          </div>
+          <div class="companion-card__name">
+            <p>Таня Фирсова</p>
+          </div>
+          <div class="companion-card__tag">
+            <p>#ЗОЖ #ПП #Фитнес #пляж #авокадо #смузи</p>
+          </div>
+          <div class="companion-card__way"></div>
+        </div>
+        <div class="companion-card">
+          <div class="companion-card__score"></div>
+          <div class="companion-card__photo"></div>
+          <div class="companion-card__flag"></div>
+          <div class="companion-card__name">
+            <p>Петя Демин</p>
+          </div>
+          <div class="companion-card__tag">
+            <p>#бургер #бар #футбол #концерт #крафт</p>
+          </div>
+          <div class="companion-card__way"></div>
+        </div>
+      </div>
     </section>
 
     <!--******************** /travelers ********************-->
