доделать блок form

--- a/src/index.html
+++ b/src/index.html
@@ -190,45 +190,141 @@
 
       <div class="companion">
         <div class="companion-card">
-          <div class="companion-card__score"></div>
-          <div class="companion-card__photo"></div>
-          <div class="companion-card__flag">
-            <ul>
-              <li>
-                <img src="img/dest/icons.svg#flag-sri-lanka" alt="" />
-              </li>
-              <li>
-                <img src="img/dest/icons.svg#flag-thailand" alt="" />
-              </li>
-              <li>
-                <img src="img/dest/icons.svg#flag-seychelles" alt="" />
-              </li>
-            </ul>
+          <div class="companion-card-image">
+            <div class="companion-card-image__score">
+              <div class="companion-card-image__score-quaantity">99</div>
+              <div class="companion-card-image__score-line"></div>
+              <div class="companion-card-image__score-level">level</div>
+            </div>
+            <div class="companion-card-image__photo"></div>
           </div>
-          <div class="companion-card__name">
-            <p>Таня Фирсова</p>
+          <div class="companion-card-info">
+            <div class="companion-card-info__flag">
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
+            <div class="companion-card-info__wrapper">
+              <div class="companion-card-info__wrapper-name">
+                Таня Фирсова
+              </div>
+            </div>
+            <div class="companion-card-info__tag">
+              <p>#ЗОЖ #ПП #Фитнес #пляж #авокадо #смузи</p>
+            </div>
+            <div class="companion-card-info__way">
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
           </div>
-          <div class="companion-card__tag">
-            <p>#ЗОЖ #ПП #Фитнес #пляж #авокадо #смузи</p>
-          </div>
-          <div class="companion-card__way"></div>
         </div>
+
         <div class="companion-card">
-          <div class="companion-card__score"></div>
-          <div class="companion-card__photo"></div>
-          <div class="companion-card__flag"></div>
-          <div class="companion-card__name">
-            <p>Петя Демин</p>
+          <div class="companion-card-image">
+            <div class="companion-card-image__score">
+              <div class="companion-card-image__score-quaantity">80</div>
+              <div class="companion-card-image__score-line"></div>
+              <div class="companion-card-image__score-level">level</div>
+            </div>
+            <div class="companion-card-image__photo"></div>
           </div>
-          <div class="companion-card__tag">
-            <p>#бургер #бар #футбол #концерт #крафт</p>
+          <div class="companion-card-info">
+            <div class="companion-card-info__flag">
+              <ul>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
+            <div class="companion-card-info__wrapper">
+              <div class="companion-card-info__wrapper-name">Петя Демин</div>
+            </div>
+            <div class="companion-card-info__tag">
+              <p>#бургер #бар #футбол #концерт #крафт</p>
+            </div>
+            <div class="companion-card-info__way">
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
           </div>
-          <div class="companion-card__way"></div>
         </div>
+        <button class="travelers__btn btn">Показать всех</button>
       </div>
     </section>
 
     <!--******************** /travelers ********************-->
+
+    <!--******************** tariff ********************-->
+    <section class="tariff">
+      <div class="create-profil">
+        <div class="create-profil__title"><h3>Добавьте свой профиль</h3></div>
+        <div class="create-profil__image"></div>
+      </div>
+      <div class="collection">
+        <div class="option">
+          <div class="option__title">Базовое размещение</div>
+          <div class="option__price">Бесплатно</div>
+          <div class="option__number">1</div>
+        </div>
+        <div class="option">
+          <div class="option__title">Вывод на первых позициях</div>
+          <div class="option__price">99 руб./мес</div>
+          <div class="option__number">2</div>
+        </div>
+        <div class="option">
+          <div class="option__title">Кастомный цвет карточки</div>
+          <div class="option__price">59 руб./мес</div>
+          <div class="option__number">3</div>
+        </div>
+      </div>
+      <div class="tariff__more">
+        <a href="">Показать тарифы для бизнеса</a>
+      </div>
+    </section>
+    <!--******************** /tariff ********************-->
+
+    <!--******************** form ********************-->
+
+    <section class="form">
+      <div class="form__title"><h3>Заинтересовались?</h3></div>
+      <div class="form__description">
+        <p>
+          Зарегистрируйтесь, <br />
+          это быстро и бесплатно! <br />Уже зарегистрированы? Тогда <br />скорее
+          <a href="#">авторизуйтесь.</a>
+        </p>
+      </div>
+      <form class="form__mail" action="">
+        <input class="form__mail-input" type="text" placeholder="E-mail" />
+        <button class="form__mail-button"></button>
+      </form>
+      </div>
+      <div class="form__text">
+        <p>Остались вопросы? <br />Мы с радостью на них ответим!</p>
+      </div>
+      <div class="form__contacts">
+        <div class="form__contacts-phone">
+          <div class="form__contacts-phone-icon"></div>
+          <div class="form__contacts-phone-number">8 800 555-86-28</div>
+        </div>
+        <div class="form__contacts-mail">
+          <div class="form__contacts-mail-icon"></div>
+          <div class="form__contacts-mail-value">mail@htmlacademy.ru</div>
+
+        </div>
+      </div>
+    </section>
+
+    <!--******************** /form ********************-->
 
     <script src="js/master.min.js"></script>
   </body>
