--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Погнали</title>
-    <link rel="stylesheet" href="css/master.min.css" />
+    <link rel="stylesheet" href="css/index.min.css" />
   </head>
 
   <body>
@@ -109,9 +109,11 @@
 
     <div class="route">
       <div class="route__descriptrion">
+        <a href="form.html">
         <div class="route__descriptrion-title">
           <h3>Направления</h3>
         </div>
+      </a>
         <div class="route__descriptrion-text">
           <p>
             Мы не продаем туры и ничего не рекламируем. Люди сами пишут о
@@ -313,10 +315,12 @@
       </div>
       <div class="form__contacts">
         <div class="form__contacts-phone">
+          <div class="form__contacts-phone-background"></div>
           <div class="form__contacts-phone-icon"></div>
           <div class="form__contacts-phone-number">8 800 555-86-28</div>
         </div>
         <div class="form__contacts-mail">
+          <div class="form__contacts-mail-background"></div>
           <div class="form__contacts-mail-icon"></div>
           <div class="form__contacts-mail-value">mail@htmlacademy.ru</div>
 
@@ -325,6 +329,55 @@
     </section>
 
     <!--******************** /form ********************-->
+
+     <!--******************** geolocation ********************-->
+
+    <section class="geolocation">
+      <div class="address">
+        <div class="address__background"></div>
+        <div class="address__icon"></div>
+        <div class="address__text">
+          <p>
+          ул. Большая Конюшенная, 19/8
+        </p
+        ></div>
+      </div>
+      <button class="geolocation__btn btn">Проложить маршрут</button>
+    </section>
+
+      <!--******************** map ********************-->
+
+      <section class="map">
+        <div class="map__image"></div>
+        <div class="map__geo"></div>
+      </section>
+
+       <!--******************** /map ********************-->
+
+        <!--******************** footer ********************-->
+
+        <div class="footer">
+          <div class="container">
+            <div class="logotype"></div>
+            <div class="social">
+              <div class="social__fb circle-middle ">
+                <div class="social__fb-icon"></div>
+              </div>
+              <div class="social__vk circle-middle ">
+                <div class="social__vk-icon"></div>
+              </div>
+              <div class="social__inst circle-middle ">
+                <div class="social__inst-icon"></div>
+              </div>
+            </div>
+            <div class="creator">
+              <div class="creator__text"><p>Разработано</p></div>
+              <div class="creator__logo"></div>
+            </div>
+          </div>
+        </div>
+
+         <!--******************** /footer ********************-->
 
     <script src="js/master.min.js"></script>
   </body>
