--- a/src/form.html
+++ b/src/form.html
@@ -23,7 +23,7 @@
           </div>
 
           <nav class="menu">
-            <div class="menu__btn menu__btn-active"></div>
+            <div class="menu__btn"></div>
           </nav>
         </div>
         <div class="description">
