--- a/src/catalog.html
+++ b/src/catalog.html
@@ -24,7 +24,7 @@
         </div>
 
         <nav class="menu">
-          <div class="menu__btn menu__btn-active"></div>
+          <div class="menu__btn"></div>
         </nav>
       </div>
       <div class="description">
@@ -41,12 +41,96 @@
 
   <section class="filter-country">
     <div class="container">
-      <div class="filter-country__filter"> </div>
-    <div class="filter-country__title">
+      <div class="filter-country-wrapper none">
+      <div class="filter-country-wrapper__filter"> </div>
+    <div class="filter-country-wrapper__title">
       <h4>Фильтрация по странам</h4>
     </div>
-    <div class="filter-country__dots"> </div>
+    <div class="filter-country-wrapper__dots"> </div>
   </div>
+
+  <div class="filter-country-list">
+  <div class="filter-country-list-one-row">
+      <div class="filter-country-list-one-row__filter"> </div>
+      <div class="filter-country-list-one-row__title">
+        <h4>Фильтрация по странам</h4>
+      </div>
+      <div class="filter-country-list-one-row__cross"> </div>
+    </div>
+      <div class="filter-country-list-continents ">
+        <div class="container">
+        <div class="filter-country-list-continents__list-continents">
+          <p>европа</p>
+          <p>азия</p>
+          <p>америка</p>
+          <p>острова</p>
+        </div>
+      </div>
+      </div>
+      <div class="container">
+      <div class="filter-country-list__list-abc">
+        <table>
+          <tr>
+            <td>а</td>
+            <td>б</td>
+            <td>в</td>
+            <td>г</td>
+            <td>д</td>
+          </tr>
+          <tr>
+            <td>е</td>
+            <td>ё</td>
+            <td>ж</td>
+            <td>з</td>
+            <td>и</td>
+          </tr>
+          <tr>
+            <td>й</td>
+            <td>к</td>
+            <td>л</td>
+            <td>и</td>
+            <td>н</td>
+          </tr>
+          <tr>
+            <td>о</td>
+            <td>п</td>
+            <td>р</td>
+            <td>с</td>
+            <td>т</td>
+          </tr>
+          <tr>
+            <td>у</td>
+            <td>ф</td>
+            <td>х</td>
+            <td>ц</td>
+            <td>ч</td>
+          </tr>
+          <tr>
+            <td>ш</td>
+            <td>щ</td>
+            <td>э</td>
+            <td>ю</td>
+            <td>я</td>
+          </tr>
+        </table>
+      </div>
+      <div class="filter-country-list__list-country">
+        <p>
+          Афганистан <br />
+          Албания<br />
+          Алгерия<br />
+          Андорра<br />
+          Аргентина<br />
+          Армения<br />
+          Австралия<br />
+          Австрия<br />
+          Азербайджан
+        </p>
+      </div>
+    </div>
+    <button class="btn filter-country-list__btn ">свернуть</button>
+  </div>
+    </div>
   </section>
 
      <!--******************** /filter-country ********************-->
@@ -392,7 +476,19 @@
 
      <!--******************** /traveler-collection ********************-->
 
+      <!--******************** more-traveler ********************-->
 
+     <section class="more-traveler">
+       <div class="container">
+       <button class="more-traveler__btn btn">Показать еще</button>
+       <div class="more-traveler-slider">
+         <button class="more-traveler-slider__prev"></button>
+         <button class="more-traveler-slider__next"></button>
+       </div>
+      </div>
+     </section>
+
+     <!--******************** /more-traveler ********************-->
 
          <!--******************** footer ********************-->
 
